--- a/AuthorToolkit.html
+++ b/AuthorToolkit.html
@@ -48,85 +48,39 @@
 
 				</div>
 
-			<!-- Main -->
 				<section class="wrapper style1">
 					<div class="container">
 						<div class="row 200%">
-							<div class="4u 12u(narrower)">
-								<div id="sidebar">
-
-									<!-- Sidebar -->
-
-										<section>
-											<h3>Just a Subheading</h3>
-											<p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
-											Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
-											Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis et nisi etiam.</p>
-											<footer>
-												<a href="#" class="button">Continue Reading</a>
-											</footer>
-										</section>
-
-										<section>
-											<h3>Another Subheading</h3>
-											<ul class="links">
-												<li><a href="#">Amet turpis, feugiat et sit amet</a></li>
-												<li><a href="#">Ornare in hendrerit in lectus</a></li>
-												<li><a href="#">Semper mod quis eget mi dolore</a></li>
-												<li><a href="#">Consequat etiam lorem phasellus</a></li>
-												<li><a href="#">Amet turpis, feugiat et sit amet</a></li>
-												<li><a href="#">Semper mod quisturpis nisi</a></li>
-											</ul>
-											<footer>
-												<a href="#" class="button">More Random Links</a>
-											</footer>
-										</section>
-
+							<section class="4u 12u(narrower)">
+								<div class="box highlight">
+									<i class="icon major round-toolkit-img"></i>
+									<h3>Templates</h3>
+									<a href="files/Paper_Template.docx"><img alt="Word Document" src="images/Word.jpg" width="70" height="80"></a> <br/><br/>
+									<a href="http://www.ieee.org/conferences_events/conferences/publishing/templates.html" target="_blank"> <img alt="Latex Document" src="images/latex.png" width="70" height="60"> </a>
 								</div>
-							</div>
-							<div class="8u  12u(narrower) important(narrower)">
-								<div id="content">
-
-									<!-- Content -->
-
-										<article>
-											<header>
-												<h2>Left Sidebar</h2>
-												<p>Sidebar on the left, content on the right.</p>
-											</header>
-
-											<span class="image featured"><img src="images/banner.jpg" alt="" /></span>
-
-											<p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
-											Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
-											Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis nisi
-											consequat etiam lorem ipsum dolor sit amet nullam.</p>
-
-											<h3>And Yet Another Subheading</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ac quam risus, at tempus
-											justo. Sed dictum rutrum massa eu volutpat. Quisque vitae hendrerit sem. Pellentesque lorem felis,
-											ultricies a bibendum id, bibendum sit amet nisl. Mauris et lorem quam. Maecenas rutrum imperdiet
-											vulputate. Nulla quis nibh ipsum, sed egestas justo. Morbi ut ante mattis orci convallis tempor.
-											Etiam a lacus a lacus pharetra porttitor quis accumsan odio. Sed vel euismod nisi. Etiam convallis
-											rhoncus dui quis euismod. Maecenas lorem tellus, congue et condimentum ac, ullamcorper non sapien.
-											Donec sagittis massa et leo semper a scelerisque metus faucibus. Morbi congue mattis mi.
-											Phasellus sed nisl vitae risus tristique volutpat. Cras rutrum commodo luctus.</p>
-
-											<p>Phasellus odio risus, faucibus et viverra vitae, eleifend ac purus. Praesent mattis, enim
-											quis hendrerit porttitor, sapien tortor viverra magna, sit amet rhoncus nisl lacus nec arcu.
-											Suspendisse laoreet metus ut metus imperdiet interdum aliquam justo tincidunt. Mauris dolor urna,
-											fringilla vel malesuada ac, dignissim eu mi. Praesent mollis massa ac nulla pretium pretium.
-											Maecenas tortor mauris, consectetur pellentesque dapibus eget, tincidunt vitae arcu.
-											Vestibulum purus augue, tincidunt sit amet iaculis id, porta eu purus.</p>
-										</article>
-
+							</section>
+							<section class="4u 12u(narrower)">
+								<div class="box highlight">
+									<i class="icon major round-copy-img"></i>
+									<h3>IEEE Copyright Form</h3>
+									<a href="files/IEEE_Copyright_Form(Paper_XX).doc"><img alt="Word Document" src="images/Word.jpg" width="70" height="80"></a>
+										</p>
 								</div>
-							</div>
+							</section>
+							<section class="4u 12u(narrower)">
+								<div class="box highlight">
+									<i class="icon major round-submit-img"></i>
+									<h3>Paper Submission</h3>
+									<p>Conference website for more information and for submission of papers and abstracts and papers should be submitted online at <a href="http://TexasSymposium.org" target="_blank">http://TexasSymposium.org</a></p>
+									<p><a href="https://cmt3.research.microsoft.com/TXWMCS2017/" target="_blank">Click Here</a> to submit paper </p>
+								</div>
+							</section>
 						</div>
 					</div>
 				</section>
 
-			<!-- Footer -->
+
+				<!-- Footer -->
 				<div id="footer">
 					<div class="container">
 						<div class="row">
@@ -179,7 +133,6 @@
 						<ul class="icons">
 							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon fa-github"><span class="label">GitHub</span></a></li>
 							<li><a href="#" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
 							<li><a href="#" class="icon fa-google-plus"><span class="label">Google+</span></a></li>
 						</ul>
