--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 							<section class="4u 12u(narrower)">
 								<div class="box highlight">
 									<i class="icon major round-cal-img"></i>
-									<h3>Important Dates</h3>
+									<h3>IMPORTANT DATES</h3>
 										<p><b>January 31, 2017</b>  <br/>Full Paper Submission Deadline</p>
 										<p><b>February 26, 2017</b> <br/>Author Notifications</p>
 										<p><b>March 10, 2017</b> <br/>Final Paper Submission</p>
@@ -99,15 +99,17 @@
 								<div class="box highlight">
 									<i class="icon major round-paper-call-img"></i>
 									<h3>CALL FOR SPONSORS</h3>
-									<p>Companies and individuals interested in sponsoring specific aspects of the conference should contact Charles Baylis at Charles_Baylis@baylor.edu</p>
+									<p>Companies and individuals interested in sponsoring specific aspects of the conference should contact Charles Baylis at
+										<a href="mailto:Charles_Baylis@baylor.edu?subject=Texas&nbsp;Symposium&nbsp;Sponsorship">Charles_Baylis@baylor.edu</a>
+										</p>
 								</div>
 							</section>
 							<section class="4u 12u(narrower)">
 								<div class="box highlight">
 									<i class="icon major round-submit-img"></i>
-									<h3>Paper Submission</h3>
-									<p>Conference website for more information and for submission of papers and abstracts and papers should be submitted online at http://TexasSymposium.org</p>
-									<p><a href="https://cmt3.research.microsoft.com/TXWMCS2017/">Click Here</a> to submit paper </p>
+									<h3>PAPER SUBMISSION</h3>
+									<p>Conference website for more information and for submission of papers and abstracts and papers should be submitted online at <a href="http://TexasSymposium.org" target="_blank">http://TexasSymposium.org</a></p>
+									<p><a href="https://cmt3.research.microsoft.com/TXWMCS2017/" target="_blank">Click Here</a> to submit paper </p>
 								</div>
 							</section>
 						</div>
@@ -124,8 +126,8 @@
 								<h3>2017 Texas Symposium on Wireless &amp; Microwave Circuits &amp; Systems <br/>
 								 March 30 - 31<br/>
 								 Baylor University, Waco, Texas</h3>
-
-							<p><a href="http://www.profdong.com/WMCS/">2017 Conference Registration </a></p>
+								<br/>
+							<p><a href="http://www.profdong.com/WMCS/" target="_blank">2017 Conference Registration </a></p>
 						</header>
 					</div>
 				</section>
@@ -181,7 +183,7 @@
 					<div class="container">
 						<header>
 							<h2>Are you ready to submit your paper?</h2>
-							<a href="https://cmt3.research.microsoft.com/TXWMCS2017/" class="button">Click Here</a>
+							<a href="https://cmt3.research.microsoft.com/TXWMCS2017/" class="button" target="_blank">Click Here</a>
 						</header>
 					</div>
 				</section>
